major story updates

--- a/Stories.scriv/QuickLook/Preview.html
+++ b/Stories.scriv/QuickLook/Preview.html
@@ -95,10 +95,12 @@
 <li>
 <p class="itemTitle">The Cowherd and the Weaver Girl</span></p>
 <p class="p1"><span class="s1"></p>
-<p class="itemText">The Cowherd and the Weaver Girl</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">In late summer, the stars Altair and Vega are high in the night sky, and the Chinese tell the following love story, of which there are many variations:</span></p></p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The Cowherd and the Weaver Girl</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A young cowherd named Ni&#xFA; L&#xE1;ng (&#x725B;&#x90CE;), came across seven fairy sisters bathing in a lake. Encouraged by his mischievous companion the ox, he stole their clothes and waited to see what would happen. The fairy sisters elected the youngest and most beautiful sister Zh&#x12B; N&#x1DA; (&#x7EC7;&#x5973;) to retrieve their clothing. She agreed to ...</p>
+<p class="itemText"><p class="p1"><span class="s1">The tale of the cowherd and the weaver girl is a love story between Zh&#x12B;n&#x1DA; (&#x7EC7;&#x5973;; the weaver girl, symbolizing the star Vega) and Ni&#xFA;l&#xE1;ng (&#x725B;&#x90CE;; the cowherd, symbolizing the star Altair). Their love was not allowed; thus, they were banished to opposite sides of the heavenly river (symbolizing the Milky Way). Once a year, on the 7th day of the 7th lunar month, a flock of magpies would form a bridge to reunite the lovers for one day.</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A young cowherd named Ni&#xFA;l&#xE1;ng came...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -110,10 +112,12 @@
 <ul>
 <li>
 <p class="itemTitle">Goldilocks and the Three Bears</p>
-<p class="itemText">GOLDILOCKS AND THE THREE BEARS</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">There was once a little girl whose hair was so bright and yellow that it glittered in the sun like spun-gold. For this reason she was called Goldilocks.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">One day Goldilocks went out into the meadows to gather flowers. She wandered on and on, and after a while she came to a forest, where she had never been before. She went on into the forest, and it was very cool and shady.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Presently she came to a little house, standing all alone in the forest, and as she was tired a...</p>
+<p class="itemText">Goldilocks and the Three Bears</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>There was once a little girl whose hair was so bright and yellow that it glittered in the sun like spun-gold. For this reason, she was called Goldilocks.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>One day Goldilocks went out into the meadows to gather flowers. She wandered on and on, and after a while, she came to a forest, where she had never been before. She went on into the forest, and it was very cool and shady.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>Presently she came to a little house, standing all alone in the forest, and as she was ...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -127,9 +131,9 @@
 <p class="itemTitle">Ali Baba and Forty Thieves</span></p>
 <p class="p1"><span class="s1"></p>
 <p class="itemText">Ali Baba and Forty Thieves</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The story takes place in Baghdad during the Abbasid era. Ali Baba and his elder brother Cassim are the sons of Ali Baba and forty thievesa merchant. After the death of their father, the greedy Cassim marries a wealthy woman and becomes well-to-do, building on their father's business - but Ali Baba marries a poor woman and settles into the trade of a woodcutter.</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">One day Ali Baba is at work collecting and cutting firewood in the forest, and he happens to overhear a grou...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>Ali Baba and his older brother, Cassim, are the sons of a merchant. After their father's death, the greedy Cassim marries a wealthy woman and becomes well-to-do, building on their father's business. Ali Baba marries a poor woman and settles into the trade of a woodcutter.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>One day, Ali Baba is at work collecting and cutting firewood in the forest, when he happens to overhear a group of 40 thieves visiting their stored treasure. Their treasure is in a cave, the mouth ...</p>
 </li>
 </ul>
 <hr class="afterText"/>
