--- a/Stories.scriv/QuickLook/Preview.html
+++ b/Stories.scriv/QuickLook/Preview.html
@@ -99,8 +99,8 @@
 <p class="itemText"><p class="p1"><span class="s1">The Cowherd and the Weaver Girl</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">The tale of the cowherd and the weaver girl is a love story between Zh&#x12B;n&#x1DA; (&#x7EC7;&#x5973;; the weaver girl, symbolizing the star Vega) and Ni&#xFA;l&#xE1;ng (&#x725B;&#x90CE;; the cowherd, symbolizing the star Altair). Their love was not allowed; thus, they were banished to opposite sides of the heavenly river (symbolizing the Milky Way). Once a year, on the 7th day of the 7th lunar month, a flock of magpies would form a bridge to reunite the lovers for one day.</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A young cowherd named Ni&#xFA;l&#xE1;ng came...</p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">A young cowherd named Ni&#xFA;l&#xE1;ng cam...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -114,10 +114,10 @@
 <p class="itemTitle">Goldilocks and the Three Bears</p>
 <p class="itemText">Goldilocks and the Three Bears</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">#</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>There was once a little girl whose hair was so bright and yellow that it glittered in the sun like spun-gold. For this reason, she was called Goldilocks.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>One day Goldilocks went out into the meadows to gather flowers. She wandered on and on, and after a while, she came to a forest, where she had never been before. She went on into the forest, and it was very cool and shady.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>Presently she came to a little house, standing all alone in the forest, and as she was ...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>Presently she came to a little house, standing all alone in the forest, and as she was...</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -144,15 +144,16 @@
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">The Hare &amp; the Tortoise</span></p>
+<p class="itemTitle">The Hare and the Tortoise</span></p>
 <p class="p1"><span class="s1"></p>
-<p class="itemText">The Hare &amp; the Tortoise</span></p></p>
+<p class="itemText">The Hare and the Tortoise</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A Hare was making fun of the Tortoise one day for being so slow.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Do you ever get anywhere?" he asked with a mocking laugh.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">"Yes," replied the Tortoise, "and I get there sooner than you think. I'll run you a race and prove it."</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The Hare was much amused at the idea of running a race with the Tortoise, but for the fun of the thing he agreed. So the Fox, who had consented to act as judge, marked the distance and started the runners off.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The Hare was soon far out of sight, a...</p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>A Hare was making fun of the Tortoise one day for being so slow.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>"Do you ever get anywhere?" he asked with a mocking laugh.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>"Yes," replied the Tortoise, "and I get there sooner than you think. I'll run you a race and prove it."</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>The Hare was much amused at the idea of running a race with the Tortoise, but for the fun of the thing, he agreed. So the Fox, who had consented to act as judge, marked the distance and started the runners off.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">&nbsp;</span>The Hare was soon far out of...</p>
 </li>
 </ul>
 </ul>
